--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/typeorm": "^7.1.1",
     "mysql": "^2.18.1",
+    "nestjs-swagger-api-implicit-queries-decorator": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
